# simple_math

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  main.cpp  mat3.cpp  mat4.cpp  quaternion.cpp  trig.cpp  vec2.cpp  vec3.cpp  vec4.cpp
include/simple_math/: angle.hpp  assert.hpp  color.hpp  common.hpp  constants.hpp  io.hpp  mat.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  simd.hpp  simple_math.hpp  trig.hpp  type_traits.hpp  utility.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
tests/: CMakeLists.txt  main.cpp  mat3.cpp  mat4.cpp  trig.cpp  vec2.cpp  vec3.cpp  vec4.cpp
